Update Windows scripts: - remove unneeded extra memory flag - remove leftover debug flags - use --enable-native-access=ALL-UNNAMED when running