@@ -13,7 +13,7 @@ $Env:path+="`;$blasPath\bin" # libblas.dll
 $Env:path+="`;$mingwBinPath" # mingw runtime dlls
 
 & $java `
-  -D"foreign.restricted=permit" `
+  --enable-native-access=ALL-UNNAMED `
   --add-modules jdk.incubator.foreign `
   -D"java.library.path=$blasPath\bin" `
   TestBlas.java `
